resources/cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Infrastructure required to bootstrap a BOSH director",
  "Parameters": {
    "KeyName": {
      "Default": "bosh",
      "Description": "Name of existing SSH Keypair to use for instances",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "BOSHInboundCIDR": {
      "Default": "0.0.0.0/0",
      "Description": "CIDR to permit access to BOSH and the NAT box",
      "Type": "String"
    },
    "VPCCIDR": {
      "Default": "10.0.0.0/16",
      "Description": "CIDR block for the VPC.",
      "Type": "String"
    },
    "BOSHSubnetCIDR": {
      "Default": "10.0.0.0/24",
      "Description": "CIDR block for the BOSH subnet.",
      "Type": "String"
    },
    "PrivateSubnetCIDR": {
      "Default": "10.0.1.0/24",
      "Description": "CIDR block for the private subnet.",
      "Type": "String"
    },
    "NATInstanceAMI": {
      "Description": "AMI ID for NAT instance.  Use the get-nat-ami tool to find the current AMI ID",
      "Type": "String"
    },
    "NATInstanceType": {
      "Default": "t2.small",
      "Description": "CIDR block for the BOSH subnet.",
      "Type": "String"
    }
  },
  "Resources": {
    "BOSHRoute": {
      "DependsOn": "VPCGatewayInternetGateway",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {"Ref": "VPCGatewayInternetGateway"},
        "RouteTableId": {"Ref": "BOSHRouteTable"}
      },
      "Type": "AWS::EC2::Route"
    },
    "BOSHRouteTable": {
      "Properties": {"VpcId": {"Ref": "VPC"}},
      "Type": "AWS::EC2::RouteTable"
    },
    "BOSHSecurityGroup": {
      "Properties": {
        "GroupDescription": "BOSH",
        "SecurityGroupEgress": [],
        "SecurityGroupIngress": [
          {
            "CidrIp": {"Ref": "BOSHInboundCIDR"},
            "FromPort": "22",
            "IpProtocol": "tcp",
            "ToPort": "22"
          },
          {
            "CidrIp": {"Ref": "BOSHInboundCIDR"},
            "FromPort": "6868",
            "IpProtocol": "tcp",
            "ToPort": "6868"
          },
          {
            "CidrIp": {"Ref": "BOSHInboundCIDR"},
            "FromPort": "25555",
            "IpProtocol": "tcp",
            "ToPort": "25555"
          },
          {
            "CidrIp": {"Ref": "VPCCIDR"},
            "FromPort": "0",
            "IpProtocol": "-1",
            "ToPort": "65535"
          }
        ],
        "VpcId": {"Ref": "VPC"}
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "BOSHSubnet": {
      "Properties": {
        "CidrBlock": {"Ref": "BOSHSubnetCIDR"},
        "Tags": [{"Key": "Name", "Value": "BOSH"}],
        "VpcId": {"Ref": "VPC"}
      },
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnet": {
      "Properties": {
        "CidrBlock": {"Ref": "PrivateSubnetCIDR"},
        "Tags": [{"Key": "Name", "Value": "Private"}],
        "VpcId": {"Ref": "VPC"}
      },
      "Type": "AWS::EC2::Subnet"
    },
    "BOSHSubnetRouteTableAssociation": {
      "Properties": {
        "RouteTableId": {"Ref": "BOSHRouteTable"},
        "SubnetId": {"Ref": "BOSHSubnet"}
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PrivateSubnetRouteTableAssociation": {
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable"},
        "SubnetId": {"Ref": "PrivateSubnet"}
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "MicroEIP": {"Properties": {"Domain": "vpc"}, "Type": "AWS::EC2::EIP"},
    "NATEIP": {
      "Properties": {"Domain": "vpc", "InstanceId": {"Ref": "NATInstance"}},
      "Type": "AWS::EC2::EIP"
    },
    "NATInstance": {
      "Properties": {
        "ImageId": {"Ref": "NATInstanceAMI"},
        "InstanceType": {"Ref": "NATInstanceType"},
        "KeyName": {"Ref": "KeyName"},
        "SecurityGroupIds": [{"Ref": "NATSecurityGroup"}],
        "SourceDestCheck": false,
        "SubnetId": {"Ref": "BOSHSubnet"},
        "Tags": [{"Key": "Name", "Value": "NAT"}]
      },
      "Type": "AWS::EC2::Instance"
    },
    "NATSecurityGroup": {
      "Properties": {
        "GroupDescription": "NAT",
        "SecurityGroupEgress": [],
        "SecurityGroupIngress": [
          {
            "CidrIp": {"Ref": "VPCCIDR"},
            "FromPort": "0",
            "IpProtocol": "-1",
            "ToPort": "65535"
          },
          {
            "CidrIp": {"Ref": "BOSHInboundCIDR"},
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22"
          }
        ],
        "VpcId": {"Ref": "VPC"}
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PrivateOutboundRoute": {
      "DependsOn": "NATInstance",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "InstanceId": {"Ref": "NATInstance"},
        "RouteTableId": {"Ref": "PrivateRouteTable"}
      },
      "Type": "AWS::EC2::Route"
    },
    "PrivateRouteTable": {
      "Properties": {"VpcId": {"Ref": "VPC"}},
      "Type": "AWS::EC2::RouteTable"
    },
    "VPC": {
      "Properties": {"CidrBlock": {"Ref": "VPCCIDR"}},
      "Type": "AWS::EC2::VPC"
    },
    "VPCGatewayAttachment": {
      "Properties": {
        "InternetGatewayId": {"Ref": "VPCGatewayInternetGateway"},
        "VpcId": {"Ref": "VPC"}
      },
      "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "VPCGatewayInternetGateway": {"Type": "AWS::EC2::InternetGateway"}
  }
}
